# onchama

./: .env.example  Cargo.toml  README.md  debug.sh
.github/workflows/: ci.yml
src/: command.rs  env.rs  lib.rs  main.rs  shared.rs
src/command/: connect.rs  disconnect.rs
src/shared/: create_discord_embed_ext.rs  data.rs
