[package]
name = "onchama"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
envy = "0.4"
fern = "0.6"
log = "0.4"
poise = "0.3"
tokio = { version = "1.21", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10"
derive-new = "0.5"
argh = "0.1"
songbird = "0.3"
